# =============================================================================
# RAG Pipeline — Orchestrates LLM + Embeddings services for RAG
#
# This is a pipeline (like Voice Agent), NOT a standalone backend.
# It calls through the LLM and Embeddings service vtables — it does NOT
# link llama.cpp or ONNX Runtime directly.
# =============================================================================

message(STATUS "Configuring RAG pipeline...")

if(POLICY CMP0135)
    cmake_policy(SET CMP0135 NEW)
endif()

# =============================================================================
# Dependencies (RAG-specific only — USearch for vector search)
# =============================================================================

include(FetchContent)

set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
set(CMAKE_POLICY_VERSION_MINIMUM 3.5 CACHE INTERNAL "")

set(USEARCH_USE_FP16LIB OFF CACHE BOOL "" FORCE)
set(USEARCH_USE_SIMSIMD OFF CACHE BOOL "" FORCE)

FetchContent_Declare(
    usearch
    GIT_REPOSITORY https://github.com/unum-cloud/usearch.git
    GIT_TAG        v2.15.2
    GIT_SHALLOW    TRUE
)
set(USEARCH_BUILD_TEST_C OFF CACHE BOOL "" FORCE)
set(USEARCH_BUILD_TEST_CPP OFF CACHE BOOL "" FORCE)
set(USEARCH_BUILD_BENCHMARK OFF CACHE BOOL "" FORCE)
set(USEARCH_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(usearch)

add_compile_definitions(USEARCH_USE_FP16LIB=0 USEARCH_USE_SIMSIMD=0)

if(NOT TARGET nlohmann_json::nlohmann_json)
    FetchContent_Declare(
        nlohmann_json
        GIT_REPOSITORY https://github.com/nlohmann/json.git
        GIT_TAG        v3.11.3
        GIT_SHALLOW    TRUE
    )
    set(JSON_BuildTests OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(nlohmann_json)
endif()

# =============================================================================
# RAG Pipeline Library (OBJECT — folded into rac_commons at link time)
#
# Built as OBJECT so all RAG symbols end up inside librac_commons.{a,so}.
# There is no separate librac_backend_rag binary to distribute.
# =============================================================================

set(RAG_PIPELINE_SOURCES
    rag_backend.cpp
    vector_store_usearch.cpp
    rag_chunker.cpp
    bm25_index.cpp
    rac_rag_register.cpp
    rac_rag_pipeline.cpp
)

# ONNX embedding provider (onnx_embedding_provider.cpp, rac_onnx_embeddings_register.cpp)
# is compiled into rac_backend_onnx instead of this OBJECT library to avoid a
# shared-library cycle: rac_commons -> rac_backend_rag -> rac_backend_onnx -> rac_commons.
# See src/backends/onnx/CMakeLists.txt for where these sources are compiled.

set(RAG_PIPELINE_HEADERS
    rag_backend.h
    vector_store_usearch.h
    rag_chunker.h
    bm25_index.h
)

add_library(rac_backend_rag OBJECT ${RAG_PIPELINE_SOURCES} ${RAG_PIPELINE_HEADERS})

target_include_directories(rac_backend_rag PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/include/rac/backends
    ${usearch_SOURCE_DIR}/include
)

# nlohmann_json is used by RAG for config parsing.
# It's header-only (INTERFACE lib) so no link-time cost.
target_link_libraries(rac_backend_rag PUBLIC
    nlohmann_json::nlohmann_json
)

target_compile_definitions(rac_backend_rag PRIVATE RAC_RAG_BUILDING)

set_target_properties(rac_backend_rag PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

target_compile_options(rac_backend_rag PRIVATE
    $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wno-unused-parameter>
    $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wno-missing-field-initializers>
)

target_compile_definitions(rac_backend_rag PRIVATE
    USEARCH_USE_FP16LIB=0
    USEARCH_USE_SIMSIMD=0
)

# =============================================================================
# Platform-specific configuration
# =============================================================================

if(RAC_PLATFORM_IOS)
    message(STATUS "Configuring RAG pipeline for iOS")
    target_link_libraries(rac_backend_rag PUBLIC
        "-framework Foundation"
        "-framework Accelerate"
    )

elseif(RAC_PLATFORM_ANDROID)
    message(STATUS "Configuring RAG pipeline for Android")
    target_compile_definitions(rac_backend_rag PRIVATE ORT_API_VERSION=17)
    target_compile_options(rac_backend_rag PRIVATE -O3 -ffunction-sections -fdata-sections)

elseif(RAC_PLATFORM_MACOS)
    message(STATUS "Configuring RAG pipeline for macOS")
    target_link_libraries(rac_backend_rag PUBLIC
        "-framework Foundation"
        "-framework Accelerate"
    )
endif()

# =============================================================================
# Summary
# =============================================================================

message(STATUS "RAG Pipeline Configuration:")
message(STATUS "  USearch: v2.15.2 (HNSW vector search)")
message(STATUS "  Architecture: Pipeline (calls LLM + Embeddings via vtables)")
message(STATUS "  Platform: ${RAC_PLATFORM_NAME}")

# =============================================================================
# JNI Bridge for Android
# =============================================================================

if(RAC_PLATFORM_ANDROID AND RAC_BUILD_SHARED)
    if(ANDROID)
        message(STATUS "Building RAG JNI bridge for Android")

        get_filename_component(RAC_COMMONS_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../.." ABSOLUTE)

        add_library(rac_backend_rag_jni SHARED jni/rac_rag_jni.cpp)

        target_include_directories(rac_backend_rag_jni PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR}
            ${RAC_COMMONS_ROOT_DIR}/include
        )

        # RAG symbols live in rac_commons (the OBJECT lib was folded in)
        target_link_libraries(rac_backend_rag_jni PRIVATE
            rac_commons
            log
        )

        target_compile_options(rac_backend_rag_jni PRIVATE -O3 -fvisibility=hidden -ffunction-sections -fdata-sections)
        target_link_options(rac_backend_rag_jni PRIVATE -Wl,--gc-sections -Wl,-z,max-page-size=16384)
    endif()
endif()
